--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-watch": "webpack -w",
     "start-server": "nodemon --watch server.js",
-    "start": "npm run build-watch & npm run start-server",
+    "start-dev": "npm run build-watch & npm run start-server",
+    "start": "node server",
     "deploy": "script/deploy"
   },
   "keywords": [],
